--- a/svn/Shmelev_Y_D/prj/stack/CMakeLists.txt
+++ b/svn/Shmelev_Y_D/prj/stack/CMakeLists.txt
@@ -1,9 +1,6 @@
-cmake_minimum_required(VERSION 2.8)
-project(stack)
+cmake_minimum_required(VERSION 3.12)
+project(untitled2)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall")
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(${PROJECT_SOURCE_DIR})
-
-add_executable(stack_test stack_test.cpp stack.cpp)
+add_executable(untitled2 stack_test.cpp stack.cpp)
