--- a/svn/Shmelev_Y_D/prj/stack/CMakeLists.txt
+++ b/svn/Shmelev_Y_D/prj/stack/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
-project(untitled2)
+project(stack)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(untitled2 stack_test.cpp stack.cpp)
+add_executable(stack stack_test.cpp stack.cpp)
