--- a/svn/Shmelev_Y_D/prj/stack/CMakeLists.txt
+++ b/svn/Shmelev_Y_D/prj/stack/CMakeLists.txt
@@ -3,4 +3,4 @@ project(stack)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(stack stack_test.cpp stack.cpp)
+add_executable(stack stack_test.cpp stack.cpp stack_list.cpp)
